1. 完成设置前后端请求token配置 2. 设置上传下载请求进度展示

--- a/package.json
+++ b/package.json
@@ -104,6 +104,7 @@
     "lodash.camelcase": "^4.3.0",
     "prettier": "^1.14.3",
     "prompt": "^1.0.0",
+    "qs": "^6.9.4",
     "replace-in-file": "^3.4.2",
     "rimraf": "^2.6.2",
     "rollup": "^0.67.0",
@@ -126,7 +127,12 @@
     "typescript": "^3.0.3",
     "webpack": "^4.28.4",
     "webpack-dev-middleware": "^3.5.0",
-    "webpack-hot-middleware": "^2.24.3",
-    "qs": "^6.9.4"
+    "webpack-hot-middleware": "^2.24.3"
+  },
+  "dependencies": {
+    "@types/nprogress": "^0.2.0",
+    "css-loader": "^3.6.0",
+    "nprogress": "^0.2.0",
+    "style-loader": "^1.2.1"
   }
 }
