--- a/package.json
+++ b/package.json
@@ -85,7 +85,6 @@
   "devDependencies": {
     "@commitlint/cli": "^7.1.2",
     "@commitlint/config-conventional": "^7.1.2",
-    "@types/jest": "^23.3.2",
     "@types/node": "^10.11.0",
     "@types/qs": "^6.9.3",
     "body-parser": "^1.18.3",
@@ -98,8 +97,6 @@
     "cz-conventional-changelog": "^2.1.0",
     "express": "^4.16.4",
     "husky": "^1.0.1",
-    "jest": "^23.6.0",
-    "jest-config": "^23.6.0",
     "lint-staged": "^8.0.0",
     "lodash.camelcase": "^4.3.0",
     "prettier": "^1.14.3",
@@ -116,7 +113,6 @@
     "semantic-release": "^15.9.16",
     "shelljs": "^0.8.3",
     "travis-deploy-once": "^5.0.9",
-    "ts-jest": "^23.10.2",
     "ts-loader": "^5.3.3",
     "ts-node": "^7.0.1",
     "tslint": "^5.11.0",
@@ -124,16 +120,20 @@
     "tslint-config-standard": "^8.0.1",
     "tslint-loader": "^3.5.4",
     "typedoc": "^0.12.0",
-    "typescript": "^3.0.3",
     "webpack": "^4.28.4",
     "webpack-dev-middleware": "^3.5.0",
     "webpack-hot-middleware": "^2.24.3"
   },
   "dependencies": {
+    "@types/jest": "^26.0.5",
     "@types/nprogress": "^0.2.0",
     "atob": "^2.1.2",
     "css-loader": "^3.6.0",
+    "jest": "^26.1.0",
+    "jest-config": "^26.1.0",
     "nprogress": "^0.2.0",
-    "style-loader": "^1.2.1"
+    "style-loader": "^1.2.1",
+    "ts-jest": "^26.1.3",
+    "typescript": "^3.9.7"
   }
 }
